- switch from Sonnet to Hunspell - bug found : underline highlighting not working, bur reported at https://bugreports.qt.io/browse/QTBUG-87260