src/app/src/highlighter.h
@@ -1,22 +1,51 @@
+/***************************************************************************
+*   Copyright (C) 2020 by Cyril Jacquet                                 *
+*   cyril.jacquet@skribisto.eu                                        *
+*                                                                         *
+*  Filename: Highlighter.h                                                   *
+*  This file is part of Skribisto.                                    *
+*                                                                         *
+*  Skribisto is free software: you can redistribute it and/or modify  *
+*  it under the terms of the GNU General Public License as published by   *
+*  the Free Software Foundation, either version 3 of the License, or      *
+*  (at your option) any later version.                                    *
+*                                                                         *
+*  Skribisto is distributed in the hope that it will be useful,       *
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of         *
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the          *
+*  GNU General Public License for more details.                           *
+*                                                                         *
+*  You should have received a copy of the GNU General Public License      *
+*  along with Skribisto.  If not, see <http://www.gnu.org/licenses/>. *
+***************************************************************************/
+
 #ifndef HIGHLIGHTER_H
 #define HIGHLIGHTER_H
 
 #include <QSyntaxHighlighter>
-#include <SonnetCore/Sonnet/Speller>
+#include "spellchecker.h"
 
 class Highlighter : public QSyntaxHighlighter
 {
     Q_OBJECT
-
 public:
-    Highlighter(QTextDocument *parent);
+    Highlighter(QTextDocument *parentDoc);
+    void setTextToHighlight(QString string);
+    void setCaseSensitivity(bool isCaseSensitive);
+    void setSpellChecker(SpellChecker *spellChecker);
 
 protected:
     void highlightBlock(const QString &text) override;
+signals:
 
+public slots:
 
 private:
-    Sonnet::Speller *m_speller;
+    QString textToHighLight;
+    Qt::CaseSensitivity sensitivity;
+    SpellChecker *m_spellChecker;
+    bool spellCheckerSet;
+
 
 };
 
